        <resources>
    <string name="app_name">Igor</string>
    <string name="txtSeparadoLogin">OU</string>
    <string name="btnEntrar">ENTRAR</string>
    <string name="criarConta">criar conta</string>
    <string name="esqueciSenha">esqueci minha senha</string>
    <string name="web_client_id">884992431665-cqoggemk1cso3qvlovt585bgasph6671.apps.googleusercontent.com</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="action_editar">Editar</string>
    <string name="action_ordenar">Ordenar</string>
    <string name="facebook_app_id">1438953156194106</string>
    <string name="fb_login_protocol_scheme">fb1438953156194106</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_loading">Carregando&#8230;</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="forgot_password_text">Insira seu email cadastrado para redefinir sua senha:</string>
    <string name="menu_adventure">Aventuras</string>
    <string name="menu_books">Livros</string>
    <string name="menu_account">Conta</string>
    <string name="menu_notifications">Convites</string>
    <string name="menu_settings">Configurações</string>
    <string name="menu_exit">Sair</string>
    <string name="strLonga">&#8230;</string>
    <string name="msg_loading_adventures">Carregando aventuras…</string>
    <string name="txtDescricaoPersonagem">Mestre impiedoso que não se importa em matar personagens</string>
    <string-array name="genders">
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Outro</item>
    </string-array>
    <string-array name="months">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
    <string name="textoDescricaoAventura">Após o misteriosos desaparecimento do príncipe conhecido como Senhor dos Espinhos, um grupo de embaixadores deve impedir que ast tensões entre os reinos cause uma guerra. O futuro do mundo será decidido na corte do Rei.</string>
    <string name="adventure_label_no_description_yet">Essa aventura ainda não possui uma sinopse!</string>
    <string name="new_account_username_placeholder">Nome de usuário</string>
    <string name="new_account_email_placeholder">E-mail</string>
    <string name="new_account_placeholder_password">Senha</string>
    <string name="new_account_placeholder_birthday">Data de nascimento</string>
    <string name="new_account_placeholder_gender">Sexo</string>
    <string name="new_account_button_create">CRIAR</string>
    <string name="msg_login_empty_email">Preencha com seu e-mail!</string>
    <string name="msg_login_empty_password">Preencha com sua senha!</string>
    <string name="msg_password">Senha</string>
    <string name="msg_email">E-mail</string>
    <string name="msg_invalid_login">E-mail ou senha incorreto.</string>
    <string name="msg_login_not_possible">Não foi possível realizar o login</string>
    <string name="msg_login_remember_me">lembrar dados</string>
    <string name="msg_login_invalid_email">insira um e-mail válido</string>
    <string name="edit_adventure_tab_progress">ANDAMENTO</string>
    <string name="edit_adventure_tab_players">JOGADORES</string>
    <string name="msg_master_unknown_player">Usuário Desconhecido</string>
    <string name="msg_next_session">Próxima sessão: %1$s - %2$s</string>
    <string name="msg_registering_account">Cadastrando…</string>
    <string name="msg_failed_to_register_account">Cadastro falhou</string>
    <string name="adventure_label_description">Escreva uma sinopse…</string>
    <string name="edit_adventure_title">Título da aventura</string>
    <string name="fragment_adventure_msg_master">Mestre</string>
    <string name="msg_next_session_not_yet_scheduled">A próxima sessão ainda não foi marcada</string>
    <string name="msg_search_for_name_or_email">Pesquisar nome ou e-mail</string>
    <string name="msg_you_have_new_notifications">Você possui novas notificações!</string>
    <string name="msg_searching_users">Pesquisando usuários...</string>
    <string name="msg_no_users_to_show">Nenhum usuário para mostrar</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_yes">Sim</string>
    <string name="msg_do_you_wish_to_delete_this_adventure">Deseja remover esta aventura?</string>
    <string name="label_invite">CONVIDAR</string>
    <string name="label_disinvite">DESCONVIDAR</string>
    <string name="label_kick_out">EXPULSAR</string>
    <string name="msg_google_login_failed">Falha ao entrar com a conta Google</string>
    <string name="msg_password_invalid_length">entre 4 e 10 caracteres</string>
    <string name="msg_password_too_weak">Senha muito fraca</string>
    <string name="msg_successfully_registered">Cadastrado com sucesso</string>
    <string name="msg_email_already_in_use">O e-mail fornecido já está em uso</string>
    <string name="msg_no_players_to_show">Sem jogadores para mostrar</string>
    <string name="msg_no_sessions_scheduled_yet">Nenhuma sessão marcada até o momento</string>
    <string name="msg_you_havent_invited_players_yet">Você ainda não convidou jogadores</string>
    <string name="label_you">VOCÊ</string>
    <string name="msg_no_adventures_to_show">Você ainda não participa de nenhuma aventura</string>
    <string name="msg_authenticating">Autenticando…</string>
    <string name="label_username">Nome de usuário</string>
    <string name="label_invitation_sent">Convite\nEnviado</string>
    <string name="msg_failed_to_upload_picture">Não foi possível enviar a imagem</string>
    <string name="label_gender">Gênero:</string>
    <string name="label_birthday">Data de nascimento:</string>
    <string name="label_pick_a_date">Escolha uma data</string>
            <string name="new_account_placeholder_password_confirm">Confirmar Senha</string>
            <string name="msg_please_login_again">Por favor, refaça o login</string>
            <string name="label_leave">SAIR</string>
            <string name="msg_do_you_want_to_leave_the_adventure">Você deseja sair da aventura?</string>
            <string name="msg_no_adventures_to_edit">Nenhuma aventura para editar!</string>
            <string name="label_non_participant">Não\nparticipa</string>
            <string name="msg_failed_to_register">Não foi possível realizar o cadastro</string>
            <string name="msg_failed_to_login_with_facebook">Falha ao realizar login com Facebook</string>
            <string name="msg_logging_in">Entrando...</string>
        </resources>
