<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/igor_login_backgrownd"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp">

            <ImageView
                android:id="@+id/logoAppSplashScreen"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="150dp"
                android:layout_height="135dp"
                android:scaleType="fitCenter"
                android:src="@drawable/igor_login_igor_icon"
                />

            <ImageView
                android:id="@+id/btnFacebook"
                app:layout_constraintTop_toBottomOf="@+id/logoAppSplashScreen"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:src="@drawable/igor_signup_botao_facebook"
                />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                app:layout_constraintTop_toBottomOf="@+id/btnFacebook"
                app:layout_constraintRight_toRightOf="@+id/btnFacebook"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:text="@string/common_signin_button_text_long" />

            <TextView
                android:id="@+id/txtSeparador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtSeparadoLogin"
                android:textColor="@color/branco"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                />

            <EditText
                android:id="@+id/emailLogin"
                android:layout_width="250dp"
                android:hint="@string/msg_email"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:textColor="@color/branco"
                android:textColorHint="@color/branco"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/branco"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSeparador"
                />

            <EditText
                android:id="@+id/senhaLogin"
                android:layout_width="250dp"
                android:hint="@string/msg_password"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:textColor="@color/branco"
                android:inputType="textPassword"
                android:textColorHint="@color/branco"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/branco"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailLogin"
                />

            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="124dp"
                android:background="@color/btnEntrar"
                android:layout_height="48dp"
                android:text="@string/btnEntrar"
                android:textSize="16sp"
                android:textColor="@color/bgnToolbar"
                android:layout_marginTop="20dp"
                app:layout_constraintRight_toRightOf="@+id/senhaLogin"
                app:layout_constraintTop_toBottomOf="@+id/senhaLogin"
                />

            <Button
                android:id="@+id/txtCriarConta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/criarConta"
                android:textSize="14sp"
                android:textColor="@color/btnEntrar"
                android:background="@color/transp"
                android:textAllCaps="false"
                app:layout_constraintLeft_toLeftOf="@+id/senhaLogin"
                app:layout_constraintTop_toBottomOf="@+id/btnEntrar"/>

            <Button
                android:id="@+id/txtEsqueciSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/esqueciSenha"
                android:textSize="14sp"
                android:textColor="@color/branco"
                android:background="@color/transp"
                android:textAllCaps="false"
                app:layout_constraintRight_toRightOf="@+id/btnEntrar"
                app:layout_constraintTop_toBottomOf="@+id/btnEntrar"/>


            <!-- Login facebook button -->
            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login_button"
                android:layout_width="0dp"
                app:layout_constraintRight_toRightOf="@+id/btnEntrar"
                app:layout_constraintTop_toBottomOf="@+id/btnEntrar"
                android:layout_height="0dp"
                android:paddingTop="11dp"
                android:paddingBottom="11dp"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>