<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.unb.igor.fragments.FragmentAdventure"
    android:background="@color/baseAventuraEdicao">

    <ImageView
        android:id="@+id/bkgEditarAventura"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/igor_login_backgrownd"/>


    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/txtTituloAventuraEdicao"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/branco"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:text="Título da aventura" />

    <EditText
        app:layout_constraintTop_toTopOf="@+id/txtTituloAventuraEdicao"
        app:layout_constraintLeft_toLeftOf="@+id/txtTituloAventuraEdicao"
        app:layout_constraintRight_toRightOf="@+id/txtTituloAventuraEdicao"
        app:layout_constraintBottom_toBottomOf="@+id/txtTituloAventuraEdicao"
        android:id="@+id/txtTituloAventuraEdicaoEdit"
        android:layout_width="0dp"
        android:textColor="@color/branco"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_adventure_title"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/abasJanelas"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloAventuraEdicao"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/aba_um"
        android:alpha="0.764" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineTabCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <Button
        android:id="@+id/abaAndamento"
        app:layout_constraintBottom_toBottomOf="@+id/abasJanelas"
        app:layout_constraintTop_toTopOf="@+id/abasJanelas"
        app:layout_constraintRight_toRightOf="@+id/guidelineTabCenter"
        app:layout_constraintLeft_toLeftOf="@+id/abasJanelas"
        android:background="@color/transp"
        android:text="@string/edit_adventure_tab_progress"
        android:textSize="14sp"
        android:textColor="@color/preto"
        android:textStyle="bold"
        android:layout_height="0dp"
        android:layout_width="0dp" />

    <Button
        android:id="@+id/abaJogadores"
        app:layout_constraintBottom_toBottomOf="@+id/abasJanelas"
        app:layout_constraintTop_toTopOf="@+id/abasJanelas"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineTabCenter"
        app:layout_constraintRight_toRightOf="@+id/abasJanelas"
        android:background="@color/transp"
        android:text="@string/edit_adventure_tab_players"
        android:textSize="14sp"
        android:textColor="@color/preto"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="0dp" />
    
    
    <android.support.constraint.ConstraintLayout
        android:id="@+id/boxAndamentoAventura"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/abasJanelas"
        app:layout_constraintRight_toRightOf="@+id/abasJanelas"
        app:layout_constraintLeft_toLeftOf="@+id/abasJanelas"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:visibility="visible"
        android:background="@color/fundoCriarContaTransparente" >

        <TextView
            android:id="@+id/txtDescricaoAventura"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:text="@string/textoDescricaoAventura" />

        <EditText
            android:id="@+id/txtDescricaoAventuraEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/txtDescricaoAventura"
            app:layout_constraintRight_toRightOf="@+id/txtDescricaoAventura"
            app:layout_constraintTop_toTopOf="@+id/txtDescricaoAventura"
            app:layout_constraintBottom_toBottomOf="@+id/txtDescricaoAventura"
            android:hint="@string/edit_adventure_label_description"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/textoDescricaoAventura"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewListaSessoes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@+id/txtDescricaoAventura"
            app:layout_constraintRight_toRightOf="@+id/txtDescricaoAventura"
            app:layout_constraintTop_toBottomOf="@+id/txtDescricaoAventura"
            app:layout_constraintBottom_toBottomOf="parent">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/txtIndicadorNenhumaSessao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Você não possui sessões registradas"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescricaoAventura"
            />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/boxJogadoresAventura"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/abasJanelas"
        app:layout_constraintRight_toRightOf="@+id/abasJanelas"
        app:layout_constraintLeft_toLeftOf="@+id/abasJanelas"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:visibility="gone"
        android:background="@color/fundoCriarContaTransparente">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profileImageMestre"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:civ_border_width="0dp"
            app:civ_border_color="#FF000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            />
        
        <TextView
            android:id="@+id/txtMestre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_adventure_msg_master"
            android:textColor="@color/preto"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/profileImageMestre"
            />

        <TextView
            android:id="@+id/txtNomeMestre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_adventure_msg_name"
            android:textStyle="italic"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtMestre"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/txtMestre"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            />

        <TextView
            android:id="@+id/txtDescricaoPersonagem"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:textColor="@color/preto"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/txtDescricaoPersonagem"
            app:layout_constraintTop_toBottomOf="@+id/txtMestre"
            app:layout_constraintLeft_toLeftOf="@+id/txtMestre"
            app:layout_constraintRight_toRightOf="parent"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewListaJogadores"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImageMestre">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/txtIndicadorNenhumJogador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Você não adicionou jogadores"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImageMestre"
            app:layout_constraintBottom_toBottomOf="parent"
            />


    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnAdventureFAB"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:layout_marginEnd="10dp"
        app:borderWidth="0dp"
        app:backgroundTint="@android:color/transparent"
        app:elevation="0dp"
        android:src="@drawable/botao_adicionar_sessao" />

</android.support.constraint.ConstraintLayout>
